<resources>
    <string name="app_name">Stawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks">No stocks added! Hit the floating action button to add one.</string>
    <string name="error_invalid_stock">Error trying to add an invalid stock symbol!</string>

    <string name="toast_stock_added_no_connectivity">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity">Will refresh when network available.</string>

    <!-- - - - - - - - - - - - - - - -->
    <!-- Content description strings -->
    <!-- - - - - - - - - - - - - - - -->
    <string name="add_a_new_stock_button_descr">Button to add a new stock symbol.</string>
    <string name="stock_symbol_to_add_descr">Edit text field to write down stock symbol to add(e.g GOOGL).</string>
    <string name="symbol_clicked_debug_message">Symbol clicked: %s</string>
    <string name="shares_outstanding">Shares Outstanding</string>
    <string name="market_cap">Market Cap</string>
    <string name="price">Price</string>
    <string name="shares_floating">Shares Floating</string>
    <string name="application_logo_image">Application logo image</string>

    <!-- - - - - - - - - - - - - -->
    <!-- Error messages          -->
    <!-- - - - - - - - - - - - - -->
    <string name="error_message"> An error has occurred. Please try again by refreshing ...</string>
    <string name="null_response">Null response from server. Try again later ...</string>
    <string name="network_error">Cannot connect to Internet. Please check your connection!</string>
    <string name="server_error">The server could not be found. Please try again after some time!!</string>
    <string name="authentication_failure_error">Cannot properly authenticate. Please check your connection!</string>
    <string name="parse_error">Parsing error! Please try again after some time!!</string>
    <string name="no_connection_error">Cannot connect to Internet. Please check your connection!</string>
    <string name="timeout_error">Connection timeout! Please check your internet connection.</string>
    <string name="intrinio_unauthorized_error">Unauthorized – Your User/Password API Keys are incorrect.</string>
    <string name="intrinio_forbidden_error">Forbidden – You are not subscribed to the data feed requested.</string>
    <string name="intrinio_notfound_error">Not Found – The end point requested is not available.</string>
    <string name="intrinio_toomany_error">Too Many Requests – You have hit a limit.</string>
    <string name="intrinio_internal_error">Internal Server Error – We had a problem with our server. Try again later.</string>
    <string name="intrinio_unavailable_error">Service Unavailable – You have hit your throttle limit or Intrinio may be experiencing difficulties.</string>
    <string name="intrinio_unknown_error">What a Terrible Failure! Unknown.</string>


</resources>
